core/cli: do not test against `.tsbuildinfo` files
Whether these are generated is even more implementation-specified than
TS features in general (which is saying something). Between TS 4.7 and
TS 4.8, the answer changes. We *hope* it will be stable after that, and
it may be that we can reintroduce them after TS 4.8, but for now, focus
instead on the generation of `.d.ts` files, which is a far more robust
artifact.

When introducing support for `--incremental` and `--watch`, it may make
more sense to do `statSync` checks on the emitted `.d.ts` files to show
they have or have not changed as expected.

--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "yarn": "1.22.4"
   },
   "devDependencies": {
+    "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
-    "@types/yargs": "^17.0.10",
     "eslint": "^7.15.0",
     "prettier": "^2.1.1",
     "release-it": "^14.4.1",
     "release-it-lerna-changelog": "^3.1.0",
     "release-it-yarn-workspaces": "^2.0.0",
-    "typescript": "^4.7.0"
+    "typescript": "^4.8.0-dev.20220804"
   },
   "version": "0.9.1"
 }
