Replace glimmerx re-exports with integration declarations
Removes the need for glimmerx shims and updates the docs to reflect that

Note:

- These currently duplicate some of the declarations from the Ember
  loose environment. We may want to see about generalizing these at
  some point, presumably when (hopefully!) GlimmerX, Glimmer, and Ember
  all merge to have a single source of truth.

Co-authored-by: Chris Krycho <hello@chriskrycho.com>

--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -30,7 +30,9 @@
     "@glint/template": "^0.9.1"
   },
   "devDependencies": {
-    "@glimmerx/component": "^0.4.2",
+    "@glimmerx/component": "^0.6.7",
+    "@glimmerx/modifier": "^0.6.7",
+    "@glimmerx/helper": "^0.6.7",
     "expect-type": "0.11.0"
   },
   "publishConfig": {
