--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "release-it": "^14.4.1",
     "release-it-lerna-changelog": "^3.1.0",
     "release-it-yarn-workspaces": "^2.0.0",
-    "typescript": "^4.8.0-dev.20220804"
+    "typescript": "^4.7.4"
   },
   "version": "0.9.1"
 }
