--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "release-it-yarn-workspaces": "^2.0.0",
     "typescript": "^4.7.4"
   },
+  "resolutions": {
+    "ember-cli-htmlbars": "^6.0.1"
+  },
   "version": "0.9.1"
 }
