--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -28,6 +28,11 @@
     "@glint/config": "^0.9.2",
     "@glint/template": "^0.9.2"
   },
+  "peerDependencies": {
+    "@glimmerx/component": "^0.6.7",
+    "@glimmerx/modifier": "^0.6.7",
+    "@glimmerx/helper": "^0.6.7"
+  },
   "devDependencies": {
     "@glimmerx/component": "^0.6.7",
     "@glimmerx/modifier": "^0.6.7",
