--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -18,6 +18,7 @@
   },
   "files": [
     "README.md",
+    "globals/index.d.ts",
     "-private/**/*.{js,d.ts}",
     "environment/**/*.{js,d.ts}",
     "modifier/**/*.{js,d.ts}",
