Move `Project` test abstraction to a shared unpublished package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     { "path": "packages/template" },
     { "path": "packages/transform" },
     { "path": "packages/vscode" },
-    { "path": "packages/scripts" }
+    { "path": "packages/scripts" },
+    { "path": "test-packages/test-utils" }
   ],
   "files": []
 }
