--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "yargs": "^17.5.1"
   },
   "devDependencies": {
+    "@glint/test-utils": "^0.9.5",
     "@types/node": "^18.7.6",
     "@types/resolve": "^1.17.1",
     "@types/uuid": "^8.3.4",
