Add a minimal (unstable!) programmatic interface to `@glint/core`

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,7 @@
   "description": "A CLI for performing typechecking on Glimmer templates",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
+  "main": "lib/index.js",
   "files": [
     "README.md",
     "lib",
