Implement `auto-glint-nocheck` script

--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -7,5 +7,5 @@
     "moduleResolution": "Node16"
   },
   "include": ["src"],
-  "references": [{ "path": "../config" }]
+  "references": [{ "path": "../config" }, { "path": "../core" }]
 }
