--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -16,8 +16,8 @@
     "bin"
   ],
   "bin": {
-    "migrate-glintrc": "bin/migrate-glintrc.js",
-    "glint-language-server": "bin/glint-language-server.js"
+    "auto-glint-nocheck": "bin/auto-nocheck.js",
+    "migrate-glintrc": "bin/migrate-glintrc.js"
   },
   "scripts": {
     "test": "vitest run",
@@ -30,14 +30,16 @@
     "@types/yargs": "^17.0.10",
     "golden-fleece": "^1.0.9",
     "js-yaml": "^4.1.0",
+    "ora": "^6.1.2",
+    "resolve": "^1.22.1",
     "true-myth": "^6.1.0",
     "yargs": "^17.5.1",
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "json5": "^2.2.1",
     "typescript": "^4.7.4",
-    "vitest": "^0.22.0",
-    "json5": "^2.2.1"
+    "vitest": "^0.22.0"
   },
   "publishConfig": {
     "access": "public"
