--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "yarn": "1.22.4"
   },
   "devDependencies": {
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
+    "@release-it-plugins/workspaces": "^3.2.0",
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.15.0",
     "prettier": "^2.1.1",
-    "release-it": "^14.4.1",
-    "release-it-lerna-changelog": "^3.1.0",
-    "release-it-yarn-workspaces": "^2.0.0",
+    "release-it": "^15.5.0",
     "typescript": "^4.7.4"
   },
   "resolutions": {
