--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,6 +7,9 @@
   "author": "Dan Freeman (https://github.com/dfreeman)",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "exports": {
+    "./types": "./lib/types.cjs"
+  },
   "files": [
     "README.md",
     "lib"
