--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "root": true,
   "extends": ["eslint:recommended"],
   "parserOptions": {
-    "ecmaVersion": 2020
+    "ecmaVersion": 2022,
+    "sourceType": "module"
   },
   "rules": {
     "prefer-const": "off",
@@ -10,13 +11,13 @@
   },
   "overrides": [
     {
-      "files": "*.js",
+      "files": ["*.js", "*.cjs", "*.mjs"],
       "env": {
         "node": true
       }
     },
     {
-      "files": "*.ts",
+      "files": ["*.ts", "*.cts", "*.mts"],
       "parser": "@typescript-eslint/parser",
       "plugins": ["@typescript-eslint"],
       "extends": [
