--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../tsconfig.compileroptions.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "bin",
-    "module": "Node16",
-    "moduleResolution": "Node16"
+    "outDir": "bin"
   },
   "include": ["src"],
   "references": [{ "path": "../config" }, { "path": "../core" }]
