--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
+    "target": "ES2020",
+    // Node16 allows top-level `await`, which was also unflagged in Node 14.8
+    "module": "Node16",
     "moduleResolution": "Node16",
     "strict": true,
     "noImplicitOverride": true,
