--- a/packages/environment-ember-template-imports/tsconfig.json
+++ b/packages/environment-ember-template-imports/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["-private"],
   "references": [
     { "path": "../environment-ember-loose" },
-    { "path": "../config" },
+    { "path": "../core" },
     { "path": "../template" }
   ]
 }
