--- a/packages/environment-glimmerx/tsconfig.json
+++ b/packages/environment-glimmerx/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
   "exclude": ["__tests__"],
-  "references": [{ "path": "../template" }, { "path": "../config" }]
+  "references": [{ "path": "../template" }, { "path": "../core" }]
 }
