--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "bin"
   },
   "include": ["src"],
-  "references": [{ "path": "../config" }, { "path": "../core" }]
+  "references": [{ "path": "../core" }]
 }
