--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -25,17 +25,35 @@
     "README.md",
     "-private/**/*.{js,d.ts}"
   ],
-  "dependencies": {
-    "@glint/template": "^0.9.7"
-  },
   "peerDependencies": {
     "@glint/environment-ember-loose": "^0.9.7",
+    "@glint/template": "^0.9.7",
+    "@types/ember__component": "^4.0.10",
+    "@types/ember__helper": "^4.0.1",
+    "@types/ember__modifier": "^4.0.3",
+    "@types/ember__routing": "^4.0.12",
     "ember-template-imports": "^3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@types/ember__component": {
+      "optional": true
+    },
+    "@types/ember__helper": {
+      "optional": true
+    },
+    "@types/ember__modifier": {
+      "optional": true
+    },
+    "@types/ember__routing": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@types/ember": "^4.0.0",
-    "@types/ember__helper": "^4.0.0",
-    "@types/ember__modifier": "^4.0.0",
+    "@types/ember__component": "^4.0.10",
+    "@types/ember__helper": "^4.0.1",
+    "@types/ember__modifier": "^4.0.3",
+    "@types/ember__routing": "^4.0.12",
     "ember-template-imports": "^3.0.0",
     "vitest": "^0.22.0"
   },
