--- a/packages/environment-glimmerx/package.json
+++ b/packages/environment-glimmerx/package.json
@@ -5,12 +5,11 @@
   "description": "A Glint environment to support GlimmerX projects",
   "license": "MIT",
   "author": "Dan Freeman (https://github.com/dfreeman)",
-  "glint-environment": "-private/environment/index.js",
   "main": "./-private/index.js",
   "exports": {
     ".": "./-private/index.js",
-    "./package.json": "./package.json",
     "./globals": "./globals/index.js",
+    "./glint-environment-definition": "./-private/environment/index.js",
     "./-private/dsl": "./-private/dsl/index.js"
   },
   "keywords": [
