--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "release-it": "^15.5.0",
     "typescript": "^4.7.4"
   },
+  "resolutions:notes": {
+    "@types/yargs": "Locking temporarily to avoid an issue with the ESM types in 17.0.14; see DT#63373"
+  },
   "resolutions": {
+    "@types/yargs": "17.0.13",
     "ember-cli-htmlbars": "^6.0.1"
   },
   "version": "0.9.7"
