--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glint/core",
-  "version": "0.9.7",
+  "version": "1.0.0-beta.1",
   "repository": "typed-ember/glint",
   "description": "A CLI for performing typechecking on Glimmer templates",
   "license": "MIT",
@@ -42,7 +42,7 @@
     "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@glint/test-utils": "^0.9.7",
+    "@glint/test-utils": "^1.0.0-beta.1",
     "@types/common-tags": "^1.8.0",
     "@types/node": "^18.11.5",
     "@types/uuid": "^8.3.4",
