--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "glint-vscode",
   "displayName": "Glint",
   "description": "Glint language server integration for VS Code",
-  "version": "0.9.7",
+  "version": "1.0.0-beta.1",
   "publisher": "typed-ember",
   "preview": true,
   "private": true,
@@ -89,7 +89,7 @@
     "vscode-languageclient": "^8.0.1"
   },
   "devDependencies": {
-    "@glint/core": "^0.9.7",
+    "@glint/core": "^1.0.0-beta.1",
     "@types/jest": "^26.0.13",
     "@types/vscode": "^1.68.1",
     "@vscode/test-electron": "^2.2.0",
