--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.compileroptions.json",
   "compilerOptions": {
+    "module": "commonjs",
     "rootDir": "src",
     "outDir": "lib"
   },
