--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -42,7 +42,7 @@
     "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@glint/test-utils": "^1.0.0-beta.1",
+    "glint-monorepo-test-utils": "^1.0.0-beta.1",
     "@types/common-tags": "^1.8.0",
     "@types/node": "^18.11.5",
     "@types/uuid": "^8.3.4",
