--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -91,11 +91,14 @@
   "dependencies": {
     "vscode-languageclient": "^8.0.1"
   },
+  "devDependencies:notes": {
+    "@vscode/test-electron": "Dropped support for Node < 16 in the 2.2.1 patch release, so locking to 2.2.0 while we still support Node 14."
+  },
   "devDependencies": {
     "@glint/core": "^1.0.0-beta.1",
     "@types/jest": "^26.0.13",
     "@types/vscode": "^1.68.1",
-    "@vscode/test-electron": "^2.2.0",
+    "@vscode/test-electron": "2.2.0",
     "esbuild": "^0.15.16",
     "intercept-stdout": "^0.1.2",
     "jest": "^26.4.2",
