--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -69,7 +69,7 @@
     "@types/ember__object": "^4.0.4",
     "@types/ember__routing": "^4.0.11",
     "ember-modifier": "^3.2.7",
-    "expect-type": "0.11.0",
+    "expect-type": "^0.15.0",
     "vitest": "^0.22.0"
   },
   "publishConfig": {
