--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -18,7 +18,7 @@
     "@glimmer/component": "^1.1.2",
     "@glimmerx/component": "^0.6.7",
     "@types/ember__component": "~4.0.8",
-    "expect-type": "0.11.0",
+    "expect-type": "^0.15.0",
     "sums-up": "^2.1.0"
   },
   "publishConfig": {
