--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     { "path": "packages/environment-ember-template-imports" },
     { "path": "packages/environment-glimmerx" },
     { "path": "packages/template" },
+    { "path": "packages/type-test" },
     { "path": "packages/vscode" },
     { "path": "packages/scripts" },
     { "path": "test-packages/test-utils" }
