--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -2,7 +2,7 @@
   "name": "glint-vscode",
   "displayName": "Glint",
   "description": "Glint language server integration for VS Code",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.1",
   "publisher": "typed-ember",
   "preview": true,
   "private": true,
