--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -66,6 +66,7 @@
     "@types/ember__array": "^4.0.2",
     "@types/ember__component": "^4.0.10",
     "@types/ember__controller": "^4.0.2",
+    "@types/ember__destroyable": "^4.0.1",
     "@types/ember__object": "^4.0.4",
     "@types/ember__routing": "^4.0.11",
     "ember-modifier": "^3.2.7 || ^4.0.0",
