--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -28,6 +28,7 @@
     "registry/**/*.{js,d.ts}"
   ],
   "peerDependencies": {
+    "@ember/test-helpers": "^2.9.3",
     "@glimmer/component": "^1.1.2",
     "@glint/template": "^1.0.0-beta.2",
     "@types/ember__array": "^4.0.2",
@@ -62,6 +63,7 @@
     }
   },
   "devDependencies": {
+    "@ember/test-helpers": "^2.9.3",
     "@glimmer/component": "^1.1.2",
     "@types/ember__array": "^4.0.2",
     "@types/ember__component": "^4.0.10",
