Convert {{component}} tests to use `@glint/type-test`
This also adds a no-op signature to `{{component}}` for the purposes of easier testing, but that whole declaration is about to get reworked anyway.

--- a/packages/environment-ember-loose/package.json
+++ b/packages/environment-ember-loose/package.json
@@ -17,7 +17,7 @@
     "glint-environment"
   ],
   "scripts": {
-    "test": "tsc --project __tests__/type-tests && vitest run",
+    "test": "glint --project __tests__/type-tests && vitest run",
     "test:watch": "vitest watch",
     "build": "tsc --build",
     "prepack": "yarn build"
