--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@glint/environment-ember-template-imports",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0",
   "repository": "typed-ember/glint",
   "description": "A Glint environment to support ember-template-imports projects",
   "license": "MIT",
@@ -27,8 +27,8 @@
     "globals/index.d.ts"
   ],
   "peerDependencies": {
-    "@glint/environment-ember-loose": "^1.0.0-beta.5",
-    "@glint/template": "^1.0.0-beta.5",
+    "@glint/environment-ember-loose": "^1.0.0",
+    "@glint/template": "^1.0.0",
     "@types/ember__component": "^4.0.10",
     "@types/ember__helper": "^4.0.1",
     "@types/ember__modifier": "^4.0.3",
