--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -30,7 +30,7 @@
     "compile": "tsc --build",
     "bundle": "esbuild lib/src/extension.js --bundle --outfile=dist/extension.js --platform=node --external:vscode --minify",
     "vscode:prepublish": "yarn build",
-    "extension:package": "vsce package --no-depencencies",
+    "extension:package": "vsce package --no-dependencies",
     "extension:publish": "vsce publish --no-dependencies"
   },
   "engines": {
@@ -85,11 +85,6 @@
     "color": "#1E293B",
     "theme": "dark"
   },
-  "workspaces": {
-    "nohoist": [
-      "**/*"
-    ]
-  },
   "dependencies": {
     "vscode-languageclient": "^8.0.1"
   },
@@ -101,10 +96,14 @@
     "@types/mocha": "^10.0.1",
     "@types/vscode": "^1.68.1",
     "@vscode/test-electron": "2.2.0",
+    "@vscode/vsce": "^2.19.0",
     "esbuild": "^0.15.16",
     "expect": "^29.5.0",
     "mocha": "^10.2.0",
     "glob": "^10.2.4"
+  },
+  "volta": {
+    "extends": "../../package.json"
   },
   "__metadata": {
     "id": "f1370239-cb1d-475c-b9da-20961224a998",
