--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -26,14 +26,16 @@
     "-private/**/*.{js,d.ts}",
     "globals/index.d.ts"
   ],
+  "dependencies": {
+    "content-tag": "^1.1.0"
+  },
   "peerDependencies": {
     "@glint/environment-ember-loose": "^1.2.1",
     "@glint/template": "^1.2.1",
     "@types/ember__component": "^4.0.10",
     "@types/ember__helper": "^4.0.1",
     "@types/ember__modifier": "^4.0.3",
-    "@types/ember__routing": "^4.0.12",
-    "ember-template-imports": "^3.0.0"
+    "@types/ember__routing": "^4.0.12"
   },
   "peerDependenciesMeta": {
     "@types/ember__component": {
@@ -55,7 +57,6 @@
     "@types/ember__helper": "^4.0.1",
     "@types/ember__modifier": "^4.0.3",
     "@types/ember__routing": "^4.0.12",
-    "ember-template-imports": "^3.0.0",
     "vitest": "^0.22.0"
   },
   "publishConfig": {
