--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -56,6 +56,14 @@
         "command": "glint.sort-imports"
       }
     ],
+    "menus": {
+      "commandPalette": [
+        {
+          "command": "glint.sort-imports",
+          "when": "editorLangId =~ /javascript|typescript|glimmer-js|glimmer-ts/"
+        }
+      ]
+    },
     "configuration": [
       {
         "title": "Glint",
