--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     # filtering branches here prevents duplicate builds from pull_request and push
     branches:
       - main
+      - fs-watching-in-ci-with-more
     # always run CI for tags
     tags:
       - '*'
