--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -27,7 +27,7 @@
     "globals/index.d.ts"
   ],
   "dependencies": {
-    "ember-template-imports": "^3.0.0"
+    "content-tag": "^1.2.2"
   },
   "peerDependencies": {
     "@glint/environment-ember-loose": "^1.3.0",
@@ -57,7 +57,6 @@
     "@types/ember__helper": "^4.0.1",
     "@types/ember__modifier": "^4.0.3",
     "@types/ember__routing": "^4.0.12",
-    "ember-template-imports": "^3.0.0",
     "vitest": "^0.22.0"
   },
   "publishConfig": {
