Fix debugging of TS Source so that breakpoints work when debugging the extension

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,10 @@
       "preLaunchTask": "npm: build",
       "autoAttachChildProcesses": true,
       "runtimeExecutable": "${execPath}",
+      "outFiles": [
+        "${workspaceFolder}/**/*.js",
+        "!**/node_modules/**"
+      ],
       "args": [
         "--extensionDevelopmentPath=${workspaceFolder}/packages/vscode",
         "${workspaceFolder}/test-packages"
