Move ember-template-imports to dependencies instead of peerDependencies so that consumers can have a better experience out of the box

--- a/packages/environment-ember-template-imports/package.json
+++ b/packages/environment-ember-template-imports/package.json
@@ -26,14 +26,16 @@
     "-private/**/*.{js,d.ts}",
     "globals/index.d.ts"
   ],
+  "dependencies": {
+    "ember-template-imports": "^3.0.0"
+  },
   "peerDependencies": {
     "@glint/environment-ember-loose": "^1.2.1",
     "@glint/template": "^1.2.1",
     "@types/ember__component": "^4.0.10",
     "@types/ember__helper": "^4.0.1",
     "@types/ember__modifier": "^4.0.3",
-    "@types/ember__routing": "^4.0.12",
-    "ember-template-imports": "^3.0.0"
+    "@types/ember__routing": "^4.0.12"
   },
   "peerDependenciesMeta": {
     "@types/ember__component": {
