fix windows tests

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -107,8 +107,8 @@
     "@glint/core": "^1.2.1",
     "@types/mocha": "^10.0.1",
     "@types/vscode": "^1.68.1",
-    "@vscode/test-electron": "2.2.0",
-    "@vscode/vsce": "^2.19.0",
+    "@vscode/test-electron": "^2.3.8",
+    "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.15.16",
     "expect": "^29.5.0",
     "mocha": "^10.2.0",
