--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": "^8.27.0",
     "prettier": "^2.1.1",
     "release-it": "^15.5.0",
-    "typescript": "~4.8.0"
+    "typescript": "~4.8.0",
+    "release-plan": "^0.6.0"
   },
   "resolutions:notes": {
     "@types/yargs": "Locking temporarily to avoid an issue with the ESM types in 17.0.14; see DT#63373",
