--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "test": "vitest run",
     "build": "tsc --build",
-    "prepack": "yarn build"
+    "prepack": "pnpm build"
   },
   "dependencies": {
     "golden-fleece": "^1.0.9",
