--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -24,12 +24,12 @@
     "Linters"
   ],
   "scripts": {
-    "pretest": "yarn build",
+    "pretest": "pnpm build",
     "test": "node lib/__tests__/support/launch-from-cli.mjs",
-    "build": "yarn compile && yarn bundle",
+    "build": "pnpm compile && pnpm bundle",
     "compile": "tsc --build",
     "bundle": "esbuild lib/src/extension.js --bundle --outfile=dist/extension.js --platform=node --external:vscode --minify",
-    "vscode:prepublish": "yarn build",
+    "vscode:prepublish": "pnpm build",
     "extension:package": "vsce package --no-dependencies",
     "extension:publish": "vsce publish --no-dependencies"
   },
