--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -24,8 +24,8 @@
     "prepack": "pnpm build"
   },
   "dependencies": {
-    "golden-fleece": "^1.0.9",
     "glob": "^7.2.0",
+    "golden-fleece": "^1.0.9",
     "js-yaml": "^4.1.0",
     "ora": "^6.1.2",
     "true-myth": "^6.1.0",
@@ -33,7 +33,10 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
+    "@glint/core": "workspace:*",
+    "@types/glob": "^8.1.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/node": "^18.11.5",
     "@types/yargs": "^17.0.10",
     "json5": "^2.2.2",
     "vitest": "^0.22.0"
