--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "pnpm": {
     "overrides": {
-      "@glimmer/validator": ">= 0.83.0"
+      "@glimmer/runtime": ">= 0.87.1",
+      "@glimmer/validator": ">= 0.87.1",
+      "@glimmer/interfaces": ">= 0.87.1"
     }
   },
   "resolutions:notes": {
