--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
   },
   "pnpm": {
     "overrides": {
-      "@glimmer/runtime": ">= 0.87.1",
-      "@glimmer/validator": ">= 0.87.1",
-      "@glimmer/interfaces": ">= 0.87.1"
+      "@glimmer/validator": ">= 0.83.0"
     }
   },
   "resolutions:notes": {
