Set to shamefully-hoist, because this monorepo relied on a ton of broken behavior from yarn@v1

--- a/.npmrc
+++ b/.npmrc
@@ -7,3 +7,8 @@ prefer-workspaces-packages=true
 
 # use the highest version possible
 resolution-mode=highest
+
+# when migrating from yarn, too much sloppiness was revealed to
+# deal with in one PR.
+# This setting re-creates yarn's broken dep management behavior
+shamefully-hoist=true
