--- a/.npmrc
+++ b/.npmrc
@@ -10,5 +10,16 @@ resolution-mode=highest
 
 # when migrating from yarn, too much sloppiness was revealed to
 # deal with in one PR.
-# This setting re-creates yarn's broken dep management behavior
+# These settings re-create yarn's broken dep management behavior
+#
+# To fix, we need to:
+# - adjust usage of ephemeral directory,
+#   - probably use tmp
+#   - properly manage dependencies under test
+#     - link to our workspace packages
+#     - potentially use scenario-tester to manage package linking
+# - properly manage dependencies
+#   - no package cycles
+#   - whatever is imported must be in local package.json
 shamefully-hoist=true
+node-linker=hoisted
