--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint": "yarn lint:scripts && yarn lint:formatting",
     "lint:scripts": "yarn eslint --max-warnings 0 --cache .",
     "lint:formatting": "yarn prettier --check .",
-    "test": "yarn workspaces run test",
+    "test": "yarn workspaces foreach -Ap --topological-dev run test",
     "build": "tsc --build",
     "release-it": "echo \"Running release-it via yarn breaks publishing! Use npx or a Volta global installation.\""
   },
   "volta": {
-    "node": "16.17.1",
-    "yarn": "1.22.4"
+    "node": "18.18.0",
+    "yarn": "1.22.21"
   },
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
@@ -39,5 +39,6 @@
     "@types/node": "^20.10.6",
     "ember-cli-htmlbars": "^6.0.1"
   },
-  "version": "1.2.2"
+  "version": "1.2.2",
+  "packageManager": "yarn@4.0.2"
 }
