--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -24,8 +24,7 @@
     "Linters"
   ],
   "scripts": {
-    "pretest": "yarn build",
-    "test": "node lib/__tests__/support/launch-from-cli.mjs",
+    "test": "yarn build && node lib/__tests__/support/launch-from-cli.mjs",
     "build": "yarn compile && yarn bundle",
     "compile": "tsc --build",
     "bundle": "esbuild lib/src/extension.js --bundle --outfile=dist/extension.js --platform=node --external:vscode --minify",
@@ -104,15 +103,15 @@
     "@vscode/test-electron": "Dropped support for Node < 16 in the 2.2.1 patch release, so locking to 2.2.0 while we still support Node 14."
   },
   "devDependencies": {
-    "@glint/core": "^1.2.2",
+    "@glint/core": "workspace:*",
     "@types/mocha": "^10.0.1",
     "@types/vscode": "^1.68.1",
     "@vscode/test-electron": "^2.3.8",
     "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.15.16",
     "expect": "^29.5.0",
-    "mocha": "^10.2.0",
-    "glob": "^10.2.4"
+    "glob": "^10.2.4",
+    "mocha": "^10.2.0"
   },
   "volta": {
     "extends": "../../package.json"
