add package lang plugin
get empty server running

basic TS feature parity

cleanup

tmp

notes

notes and fidgets

get something running on volar 2

too complicated

apha 14

2.0

get something compiling again

wip

use mdx as example. not vue

it builds

volar 2.0.1

get .gts autocomplete working

get something sorta showing up in Volar Labs

fix: use consistent lsp packages

absorb portions of vsc-ember-syntax

bump volar

get transormed IR showing up in labs

valid leaf tokens mapping to each other

fix comment

decode

avoid fileId hacks

cleanup

add gjs support

cleanup

volar 2.0.4

getting solo .hbs type-checking working

comments

bump

disable linting

--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -4,6 +4,9 @@
     // Node16 allows top-level `await`, which was also unflagged in Node 14.8
     "module": "Node16",
     "moduleResolution": "Node16",
+
+    // changing this was necessary for WeakRef to be available (required/referenced in Volar)
+    "lib": ["ESNext", "dom"],
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -11,6 +14,9 @@
     "composite": true,
     "declaration": true,
     "sourceMap": true,
-    "types": ["@types/node"]
+    "types": ["@types/node"],
+    
+    // new
+    "allowSyntheticDefaultImports": true,
   }
 }
