--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,14 +33,21 @@
   },
   "dependencies": {
     "@glimmer/syntax": "^0.84.3",
+		"computeds": "^0.0.1",
     "escape-string-regexp": "^4.0.0",
     "semver": "^7.5.2",
     "silent-error": "^1.1.1",
     "uuid": "^8.3.2",
-    "vscode-languageserver": "^8.0.1",
     "vscode-languageserver-textdocument": "^1.0.5",
     "vscode-uri": "^3.0.8",
-    "yargs": "^17.5.1"
+    "yargs": "^17.5.1",
+    "@volar/kit": "~2.0.4",
+    "@volar/language-core": "~2.0.4",
+    "@volar/language-server": "~2.0.4",
+    "@volar/language-service": "~2.0.4",
+    "@volar/source-map": "~2.0.4",
+    "@volar/typescript": "~2.0.4",
+    "volar-service-typescript": "0.0.29"
   },
   "devDependencies": {
     "glint-monorepo-test-utils": "^1.4.0",
