--- a/tsconfig.compileroptions.json
+++ b/tsconfig.compileroptions.json
@@ -8,6 +8,7 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "esModuleInterop": false,
+    "noEmitOnError": false,
     "composite": true,
     "declaration": true,
     "sourceMap": true,
